fix: minor adjustments